--- a/public/.htaccess
+++ b/public/.htaccess
@@ -4,7 +4,8 @@
 </Files>
 
 <Files admin.php>
-   AuthUserFile "C:\xampp\htdocs\projet\projet_event\app\views\admin\.htpasswd"
+#    AuthUserFile "C:\xampp\htdocs\projet\projet_event\app\views\admin\.htpasswd"
+    AuthUserFile "C:\wamp64\www\projet_event\app\views\admin\.htpasswd"
 #    AuthUserFile "C:\wamp\www\projet\projet_event\app\views\admin\.htpasswd"
     AuthName "Administration"
     AuthType Basic
